
    subsetMeshFromDEM /patch/to/file/top.xyz /patch/to/file/bottom.xyz

    two patches are automatically generated: top and bottom.

- setFieldsFromXY

  - utility now generate a mapping file (.map) linking mesh cells to XY points.
  If .map file is present, utility check that number of cells corresponds to the
  mesh and that number of points corresponds to the interpolation. This allows
  the re-use of similar interpolation with reduced cost

### Bug

- groundwaterTransport2DFoam

  - fix dryCells (C=0 and dC/dt=0)

************************
*** PMFv2107.1
*** Minor fixes for PMFv2107
************************

### Libraries

- numericalMethods

  - timestepManager: new class managing derivative computations (1s, 2nd
  and 3rd order) and timestepping based on truncation error.
  This allows to simplify the code of the solvers by implementing common
  functions in this new class

- porousBoundaryConditions

  - fixedHeadPressure/fixedHeadPressureSTL BCs have been deleted. They can be
  replaced by usual fixedValue while initialize values with the utility
  setBoundaryWaterLevel

### Solvers

- steadyGroundwaterFoam

  - seepage has been added (similar to transient solver groundwaterFoam)

- groundwater solvers

  - number of seepage cells is only displayed for serial simulation (parallel
  simulations give wrong value in terminal due to domain decomposition)

### Tutorials

- darcyFoam

  - fix input folder (0 -> 0.org) to avoid paraview visualizations

### utilities

- setBoundaryWaterLevel

  - replace setBoundaryHeadPressure as it can be used for potential or h
  - version option (2D/3D) has been replaced by field option (h/potential)

### Bug Fix

- groundwaterFoam/groundwater2DFoam: set deltah/dpotential=0 for seepage cells

- steadyGroundwaterFoam: set residual=0 for seepage cells

- pcVanGenuchten: fix Se computation when -VSMALL < h < 0

- set derivative=0 (1st/2nd/3rd order) for dry cells.

************************
*** PMFv2107
*** Bug Fix + tools folder 